<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/fav_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.982"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/PhotoCover"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:alpha="0.7"
            android:background="@color/colorPrimaryDark"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Cover_Photo_Poster" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="180dp"
            android:layout_height="250dp"
            android:layout_marginTop="116dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/Photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <RatingBar
            android:id="@+id/Rating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:isIndicator="true"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PhotoCover"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/GenreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Genre"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/Title"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <TextView
            android:id="@+id/YearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Year"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/GenreLabel"
            app:layout_constraintTop_toBottomOf="@+id/GenreLabel" />

        <TextView
            android:id="@+id/LanguageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/YearLabel"
            app:layout_constraintTop_toBottomOf="@+id/YearLabel" />

        <TextView
            android:id="@+id/Genre"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/GenreTes"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/GenreLabel"
            app:layout_constraintStart_toEndOf="@+id/Rating"
            app:layout_constraintTop_toTopOf="@+id/GenreLabel" />

        <TextView
            android:id="@+id/Year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Year"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/YearLabel"
            app:layout_constraintStart_toEndOf="@+id/Rating"
            app:layout_constraintTop_toTopOf="@+id/YearLabel" />

        <TextView
            android:id="@+id/Language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/language"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/LanguageLabel"
            app:layout_constraintStart_toEndOf="@+id/Rating"
            app:layout_constraintTop_toTopOf="@+id/LanguageLabel" />

        <TextView
            android:id="@+id/Synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/synopsis"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/Title"
            app:layout_constraintStart_toStartOf="@+id/Title"
            app:layout_constraintTop_toBottomOf="@+id/Language" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/tes"
            app:layout_constraintTop_toBottomOf="@id/Synopsis"
            app:layout_constraintStart_toStartOf="@id/Title"
            app:layout_constraintEnd_toEndOf="@id/Title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>