<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="226dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    tools:context=".adapter.MovieAdapter">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@id/Photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/Photo"
                app:layout_constraintTop_toTopOf="@id/Photo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@string/Title"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/Year"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/combine"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/Year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/Year"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@id/Title"
                        app:layout_constraintStart_toStartOf="@id/Title"
                        app:layout_constraintTop_toBottomOf="@id/Title" />

                    <RatingBar
                        android:id="@+id/Rating"
                        style="@android:style/Widget.Material.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:theme="@style/RatingBar"
                        app:layout_constraintBottom_toTopOf="@+id/view"
                        app:layout_constraintEnd_toEndOf="@+id/Year"
                        app:layout_constraintStart_toStartOf="@+id/Year"
                        app:layout_constraintTop_toBottomOf="@+id/Year" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/combine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="150dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/read_more"
                            android:textStyle="bold|italic"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/Photo"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:scaleType="fitXY"
                android:translationZ="?attr/actionBarSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@android:color/black"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>